--- a/stack.yaml
+++ b/stack.yaml
@@ -28,9 +28,7 @@ packages:
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps:
-- derive-2.6.3
-- haskell-src-exts-1.19.1
+# extra-deps:
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
