--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,14 @@ addons:
 before_install:
   - mkdir -p ~/.local/bin
   - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
-  - travis_retry curl -L https://raw.github.com/ndmitchell/hlint/master/misc/travis.sh | sh -s .
 
 install:
   - stack setup
+  - stack install hlint
   - stack install doctest
 
 script:
-  - hlint src/
+  - stack exec hlint src/
   - stack exec doctest src/
 
 branches:
