--- a/package.yaml
+++ b/package.yaml
@@ -1,4 +1,4 @@
-name:                Programación-Declarativa
+name:                Programacion-Declarativa
 version:             0.1.0.0
 github:              "fabianhjr/programaciondeclarativa-20182"
 author:              "Fabián Heredia Montiel"
