--- a/package.yaml
+++ b/package.yaml
@@ -17,8 +17,9 @@ author:              "Fabián Heredia Montiel"
 description: Please see the README on Github at <https://github.com/fabianhjr/programaciondeclarativa-20182#readme>
 
 dependencies:
-- base       >= 4.7   && < 5
-- mtl        >= 2.2.2 && < 3
+- base       >= 4.7     && < 5
+- mtl        >= 2.2.2   && < 3
+- parallel   >= 3.2.1.1 && < 4
 - QuickCheck 
 
 library:
